# docket

./: .docket.json  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  experiment.md  projects.json  pyproject.toml
.agents_workspace/: ARCHITECTURE.md  DECISION_LOG.md
.agents_workspace/planning/: ITER_01.md  ITER_01_v2.md  ITER_02.md  ITER_02_v2.md  ITER_03.md  SKELETON.md
.github/workflows/: ci.yml
docket/: __init__.py  __main__.py  core.py  frontmatter.py  server.py  tracker.py  tui.py
docket/schema/: docket.schema.json
docket/static/: app.js  index.html  style.css
docs/guide/: getting-started.md  index.md  reference.md  troubleshooting.md
docs/guide/how-to/: batch-implement.md  implement-headless.md  implement-manually.md  re-run-and-reopen.md
docs/guide/operations/: configure-registry.md  install.md  runbook.md
tests/: conftest.py
tests/api/: test_server.py  test_server_unit.py  test_tui.py
tests/unit/: test_core_init.py  test_core_manager.py  test_core_misc.py  test_core_plans.py  test_core_registry.py  test_core_run_implement.py  test_frontmatter.py  test_main.py  test_tracker.py
